Fix compile error (#1004)
KeycloakModelUtils.runJobInTransactionWithResult() method changed it
signature

Signed-off-by: Pedro Ruivo <pruivo@redhat.com>